--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>KV Consultancy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="style.css" rel="stylesheet"/>
 </head>
+
 <body>
-  mail us at - info@kvconsultancy.in
+  <div class="container">
+    <h1>Coming Soon.</h1>
+  </div>
+  <footer>
+    <a href="mailto:info@kvconsultancy.in">info@kvconsultancy.in</a> | &copy; 2018 KV Consultancy
+  </footer>
 </body>
+
 </html>
