--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <h1>Coming Soon.</h1>
+    <h1>Coming Soon...</h1>
   </div>
   <footer>
     <a href="mailto:info@kvconsultancy.in">info@kvconsultancy.in</a> | &copy; 2018 KV Consultancy
