--- a/index.html
+++ b/index.html
@@ -1,21 +1,177 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
+	<head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>KV Consultancy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="style.css" rel="stylesheet"/>
-</head>
+		<title>Home | Lana - Creative Coming Soon Template</title>
 
-<body>
-  <div class="container">
-    <h1>Coming Soon...</h1>
-  </div>
-  <footer>
-    <a href="mailto:info@kvconsultancy.in">info@kvconsultancy.in</a> | &copy; 2018 KV Consultancy
-  </footer>
-</body>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="">
+		<meta name="keywords" content="">
+		<meta name="author" content="Erilisdesign.com">
 
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+		<link rel="stylesheet" href="assets/css/style.min.css">
+		<link rel="stylesheet" href="assets/css/utilities.min.css">
+
+		<link rel="stylesheet" href="assets/css/custom.css">
+
+		<link rel="stylesheet" href="assets/css/jquery.fullpage.min.css" type="text/css">
+		<link rel="stylesheet" href="assets/css/slick.min.css" type="text/css">
+		<link rel="stylesheet" href="assets/css/vegas.min.css" type="text/css">
+		<link rel="stylesheet" href="assets/css/magnific-popup.min.css" type="text/css">
+		<link rel="stylesheet" href="assets/css/animate.min.css" type="text/css">
+		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css" type="text/css">
+		<link rel="stylesheet" href="assets/css/themify-icons.css" type="text/css">
+
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,300i,400,400i,700,700i%7CMontserrat:100,200,300,400,500,700">
+
+		<link rel="shortcut icon" href="assets/images/favicon.ico">
+
+		<script src="assets/js/modernizr-custom.js"></script>
+
+	</head>
+	<body class="layout-wide">
+
+		<div id="preloader" class="preloader preloader-dark">
+			<div class="loader-status">
+				<div class="circle-side"></div>
+			</div>
+		</div>
+
+		<div class="site-container">
+
+			<div id="top"></div>
+		
+			<!-- Site header -->
+			<header class="site-header header-mobile-light header-content-light header-content-mobile-dark">
+				<div class="header-brand">
+					<!-- Logo -->
+					<a class="logo" href="#">
+						<h3>KV Consultancy</h3>
+					</a>
+					<button type="button" id="navigation-toggle" class="nav-toggle">
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
+				</div>
+				<div class="header-collapse">
+					<div class="header-collapse-inner">
+						<nav class="site-nav">
+							<ul id="navigation">
+								<li data-menuanchor="home">
+									<a href="#home">Home</a>
+								</li>
+								<li data-menuanchor="contact">
+									<a href="#contact">Contact</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</header>
+
+			<!-- Back To Top Button -->
+			<a href="#top" class="backtotop scrollto">
+				<span>Back To Top</span>
+				<i class="fas fa-angle-up"></i>
+			</a>
+
+			<!-- Global overlay -->
+			<div class="global-overlay">
+				<div class="overlay-inner" data-gradient-bg="[['#AA076B','#61045F'],['#02AAB0','#00CDAC'],['#DA22FF','#9733EE']]"></div>
+			</div>
+
+			<!-- Scroll progress -->
+			<div class="scroll-progress">
+				<div class="sp-left">
+					<div class="sp-inner"></div>
+					<div class="sp-inner progress"></div>
+				</div>
+				<div class="sp-right">
+					<div class="sp-inner"></div>
+					<div class="sp-inner progress"></div>
+				</div>
+			</div>
+
+			<!-- Page content -->
+			<div class="ln-fullpage" data-navigation="true">
+
+				<section class="ln-section d-lg-flex fullscreen-lg" data-anchor="home" data-tooltip="Home">
+					<div class="container align-self-lg-center">
+						<div class="row">
+							<div class="col-12 col-lg-9 col-xl-6">
+
+								<div class="countdown text-white mb-5 animated" data-animation="fadeInUp" data-countdown="2018/08/25 12:00:00"></div>
+								<h2 class="text-white mb-5 animated" data-animation="fadeInUp" data-animation-delay="150">Our website is under construction. We`ll be here soon with our new awesome site.</h2>
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="ln-section d-xl-flex" data-anchor="contact" data-tooltip="Contact">
+					<div class="container align-self-center">
+						<div class="row mb-5">
+							<div class="col-12 col-xl-6">
+								<h2 class="text-white mb-4 animated" data-animation="fadeInUp">Contact Us</h2>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 col-lg-5 mb-5 mb-lg-0">
+								<div class="row">
+									<div class="col-12 col-md-4 col-lg-6 animated" data-animation="fadeInUp" data-animation-delay="150">
+										<div class="feature-block">
+											<a class="text-white" href="mailto:info@kvconsultancy.in">info@kvconsultancy.in</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+			</div>
+
+			<!-- Site footer -->
+			<footer class="site-footer footer-content-light footer-mobile-content-light">
+				<div class="overlay">
+					<div class="overlay-inner bg-white"></div>
+				</div>
+				<div class="container socials-container">
+					<nav class="socials-icons">
+						<ul class="mx-auto">
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="container copyright-container">
+					<p>© 2018 KV Consultancy - All Rights Reserved</p>
+				</div>
+			</footer>
+
+		</div>
+
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.easing.min.js"></script>
+		<script src="assets/js/bootstrap.bundle.min.js"></script>
+		<script src="assets/js/scrolloverflow.min.js"></script>
+		<script src="assets/js/jquery.fullpage.min.js"></script>
+		<script src="assets/js/jquery.waypoints.min.js"></script>
+		<script src="assets/js/jquery.smooth-scroll.min.js"></script>
+		<script src="assets/js/jquery.validate.min.js"></script>
+		<script src="assets/js/jquery.form.min.js"></script>
+		<script src="assets/js/jquery.magnific-popup.min.js"></script>
+		<script src="assets/js/jquery.countdown.min.js"></script>
+		<script src="assets/js/imagesloaded.pkgd.min.js"></script>
+		<script src="assets/js/granim.min.js"></script>
+		<script src="assets/js/slick.min.js"></script>
+		<script src="assets/js/vegas.min.js"></script>
+		<script src="assets/js/jquery.mb.YTPlayer.js"></script>
+
+		<script src="assets/js/main.min.js"></script>
+
+	</body>
 </html>
