--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 
-		<title>Home | Lana - Creative Coming Soon Template</title>
+		<title>KV Consultancy</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<meta name="author" content="Erilisdesign.com">
 
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/style.min.css">
@@ -25,8 +24,6 @@
 		<link rel="stylesheet" href="assets/css/themify-icons.css" type="text/css">
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,300i,400,400i,700,700i%7CMontserrat:100,200,300,400,500,700">
-
-		<link rel="shortcut icon" href="assets/images/favicon.ico">
 
 		<script src="assets/js/modernizr-custom.js"></script>
 
@@ -103,7 +100,7 @@
 						<div class="row">
 							<div class="col-12 col-lg-9 col-xl-6">
 
-								<div class="countdown text-white mb-5 animated" data-animation="fadeInUp" data-countdown="2018/08/25 12:00:00"></div>
+								<!-- <div class="countdown text-white mb-5 animated" data-animation="fadeInUp" data-countdown="2018/08/25 12:00:00"></div> -->
 								<h2 class="text-white mb-5 animated" data-animation="fadeInUp" data-animation-delay="150">Our website is under construction. We`ll be here soon with our new awesome site.</h2>
 
 							</div>
