--- a/v1/index.html
+++ b/v1/index.html
@@ -221,7 +221,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<h1 class="to-animate">Do something you love.</h1>
-							<h2 class="to-animate">Another free HTML5 bootstrap template by <a href="http://freehtml5.co/" target="_blank" title="Free HTML5 Bootstrap Templates">FREEHTML5.co</a> released under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons 3.0</a></h2>
+							<h2 class="to-animate">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aperiam officia at? Quo, rem provident, saepe ab omnis quos itaque optio officia non natus nesciunt obcaecati, consequuntur ut. Facilis, cumque?</h2>
 						</div>
 					</div>
 				</div>
