style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -109,8 +109,10 @@
 				<div class="text-inner">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<h1 class="to-animate">Do something you love.</h1>
-							<h2 class="to-animate">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aperiam officia at? Quo, rem provident, saepe ab omnis quos itaque optio officia non natus nesciunt obcaecati, consequuntur ut. Facilis, cumque?</h2>
+							<h1 class="to-animate">Who we are.</h1>
+							<h2 class="to-animate">
+                  We are the team of Efficient, qualified professionals having above 20 year experienced with industrial background. We provide the engineering services equipped with experienced professional for Solar design ,Thermal design, Mechanical design, Detail Drawing, Estimation and analysis that helps the clients to realize maximum return from their equipment and of-course from their valuable trust.
+              </h2>
 						</div>
 					</div>
 				</div>
@@ -127,8 +129,8 @@
 					<div class="overlay"></div>
 					<div class="fh5co-text">
 						<i class="fh5co-intro-icon icon-bulb"></i>
-						<h2>Plan</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h2>Consultancy</h2>
+						<p>KVC undertakes consulting projects in the environmental as well as renewable energy sector</p>
 						<p><a href="#" class="btn btn-primary">Get In Touch</a></p>
 					</div>
 				</div>
@@ -137,9 +139,13 @@
 					<div class="overlay"></div>
 					<div class="fh5co-text">
 						<i class="fh5co-intro-icon icon-wrench"></i>
-						<h2>Develop</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#" class="btn btn-primary">Click Me</a></p>
+						<h2>Other Services</h2>
+            <p>
+                Chartered Engineer<br>
+                Design Analysis<br>
+                Automation
+            </p>
+						<p><a href="#" class="btn btn-primary">Know more</a></p>
 					</div>
 				</div>
 				<div class="fh5co-block to-animate" style="background-image: url(images/img_10.jpg);">
@@ -147,7 +153,7 @@
 					<div class="overlay"></div>
 					<div class="fh5co-text">
 						<i class="fh5co-intro-icon icon-rocket"></i>
-						<h2>Launch</h2>
+						<h2>FAQ</h2>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 						<p><a href="#" class="btn btn-primary">Why Us?</a></p>
 					</div>
@@ -168,14 +174,14 @@
 					<h2 class=" left-border to-animate">Services</h2>
 					<div class="row">
 						<div class="col-md-8 subtext to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
-						</div>
+							<h3>Our experience and technical strength, together with our commitment to service, makes us client’s most valuable resource in total cost management. We provides design supports for clients seeking to manufacture or Installation of equipment that meets International Code i.e. ASME Code and standards, HEI, TEMA, IBR, IS, API etc. or as desired by purchaser.</h3>
+            </div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sm-6 fh5co-service to-animate">
-					<i class="icon to-animate-2 icon-anchor"></i>
+					<i class="icon to-animate-2 icon-cogs"></i>
 					<h3>Brand &amp; Strategy</h3>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
 				</div>
