style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -188,7 +188,7 @@
 				<div class="col-md-6 col-sm-6 fh5co-service to-animate">
 					<i class="icon to-animate-2 icon-layers2"></i>
 					<h3>Solar Energy</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
+					<p>Solar is the lifeline of future on this earth. We believe that quality driven system can only give best to the nature as it enhance life or value of the system, due to which we overcome waste of the future. Towards this we are contributing little bit from our end by giving one roof quality solution to the solar industry.</p>
 				</div>
 
 				<div class="clearfix visible-sm-block"></div>
