style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -159,11 +159,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="row watch-video text-center to-animate">
+			<!-- <div class="row watch-video text-center to-animate">
 				<span>Watch the video</span>
 
 				<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo btn-video"><i class="icon-play2"></i></a>
-			</div>
+			</div> -->
 		</div>
   </section>
   
@@ -181,7 +181,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sm-6 fh5co-service to-animate">
-					<i class="icon to-animate-2 icon-cogs"></i>
+					<i class="icon to-animate-2 icon-speech-bubble"></i>
 					<h3>Environment</h3>
 					<p>KV Consultancy will give you one roof solution of your problem of emission monitoring. What best to client after understanding their requirement as per ministry guideline we give quality system solution to the client.</p>
 				</div>
