style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -96,8 +96,8 @@
             <li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
             <li><a href="#" data-nav-section="services"><span>Services</span></a></li>
             <li><a href="#" data-nav-section="work"><span>Work</span></a></li>
-            <li><a href="#" data-nav-section="testimonials"><span>Clients</span></a></li>
             <li><a href="#" data-nav-section="about"><span>Team</span></a></li>
+            <li><a href="#" data-nav-section="testimonials"><span>Clients</span></a></li>
             <li><a href="#" data-nav-section="contact"><span>Contact</span></a></li>
           </ul>
         </div>
@@ -112,7 +112,7 @@
     <div class="container">
       <div class="text-wrap">
         <div class="text-inner">
-          <div class="row">
+          <div class="row row-bottom-padded-sm">
             <div class="col-md-8 col-md-offset-2">
               <h1 class="to-animate">Who we are.</h1>
               <h2 class="to-animate">
@@ -131,7 +131,7 @@
 
   <section id="fh5co-intro">
     <div class="container">
-      <div class="row row-bottom-padded-lg">
+      <div class="row row-bottom-padded-sm">
         <div class="fh5co-block to-animate" style="background-image: url(images/img_7.jpg);">
           <div class="overlay-darker"></div>
           <div class="overlay"></div>
@@ -139,7 +139,7 @@
             <i class="fh5co-intro-icon icon-bulb"></i>
             <h2>Consultancy</h2>
             <p>KVC undertakes consulting projects in the environmental as well as renewable energy sector</p>
-            <p><a href="#" class="btn btn-primary">Get In Touch</a></p>
+            <p><a href="#fh5co-contact" class="btn btn-primary">Get In Touch</a></p>
           </div>
         </div>
         <div class="fh5co-block to-animate" style="background-image: url(images/img_8.jpg);">
@@ -160,11 +160,11 @@
           <div class="overlay-darker"></div>
           <div class="overlay"></div>
           <div class="fh5co-text">
-            <i class="fh5co-intro-icon icon-rocket"></i>
+            <i class="fh5co-intro-icon icon-question-circle"></i>
             <h2>FAQ</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
               blind texts.</p>
-            <p><a href="#" class="btn btn-primary">Why Us?</a></p>
+            <p><a href="#" class="btn btn-primary">Know more</a></p>
           </div>
         </div>
       </div>
@@ -193,14 +193,14 @@
       </div>
       <div class="row">
         <div class="col-md-6 col-sm-6 fh5co-service to-animate">
-          <i class="icon to-animate-2 icon-speech-bubble"></i>
+          <i class="icon to-animate-2 icon-moon2"></i>
           <h3>Environment</h3>
           <p>KV Consultancy will give you one roof solution of your problem of emission monitoring. What best to client
             after understanding their requirement as per ministry guideline we give quality system solution to the
             client.</p>
         </div>
         <div class="col-md-6 col-sm-6 fh5co-service to-animate">
-          <i class="icon to-animate-2 icon-layers2"></i>
+          <i class="icon to-animate-2 icon-sun-o"></i>
           <h3>Solar Energy</h3>
           <p>Solar is the lifeline of future on this earth. We believe that quality driven system can only give best to
             the nature as it enhance life or value of the system, due to which we overcome waste of the future. Towards
@@ -210,7 +210,7 @@
         <div class="clearfix visible-sm-block"></div>
 
         <div class="col-md-6 col-sm-6 fh5co-service to-animate">
-          <i class="icon to-animate-2 icon-video2"></i>
+          <i class="icon to-animate-2 icon-rocket"></i>
           <h3>Hybrid Energy</h3>
           <p>KV Consultancy is working closely with customers on projects that can additional investigate the
             opportunities in hybrid and provide knowledge to direct the future product contribution. Also, KV
@@ -218,7 +218,7 @@
             with suppliers.</p>
         </div>
         <div class="col-md-6 col-sm-6 fh5co-service to-animate">
-          <i class="icon to-animate-2 icon-monitor"></i>
+          <i class="icon to-animate-2 icon-user"></i>
           <h3>Project Management</h3>
           <p>Project Management solution is the necessity of any organization. KV Consultancy believes, any company can
             grow with innovative value for money solutions. Worry free project solution to the client on their
@@ -311,25 +311,6 @@
       </div>
   </section>
 
-  <section id="fh5co-testimonials" data-section="testimonials">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 section-heading text-center">
-          <h2 class="to-animate">Clients</h2>
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2 subtext to-animate">
-              <h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                the blind texts.</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-
-      </div>
-    </div>
-  </section>
-
   <section id="fh5co-about" data-section="about">
     <div class="container">
       <div class="row">
@@ -337,8 +318,7 @@
           <h2 class="to-animate">Core Consultant Team</h2>
           <div class="row">
             <div class="col-md-8 col-md-offset-2 subtext to-animate">
-              <h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                the blind texts.</h3>
+              <h3></h3>
             </div>
           </div>
         </div>
@@ -349,7 +329,7 @@
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/himanshu.png" alt="Image"></figure>
             <h3>Himanshu Sharma</h3>
-            <span class="fh5co-position">B.E. ICE, NSIT</span>
+            <span class="fh5co-position">B.E., NSIT, Director</span>
             <p>Experience with with Fractal Analytics, Gurgaon as a Senior Consultant &Fractal Analytics, USA as a
               Senior Consultant</p>
           </div>
@@ -399,13 +379,60 @@
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/lalit.png" alt="Image"></figure>
             <h3>Er. Lalit Kaushik</h3>
-            <span class="fh5co-position">Chartered Eng., MBA (BITS Plani)</span>
-            <p>B.Tech. Mechanical Engineering, Experience with Radico Khaitan Limited, Macawber Beekay Pvt. Ltd., Synnova Power</p>
+            <span class="fh5co-position">B.Tech. MBA (BITS Plani)</span>
+            <p>B.Tech. Mechanical Engineering, Experience with Radico Khaitan Limited, Macawber Beekay Pvt. Ltd.,
+              Synnova Power</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <section id="fh5co-testimonials" data-section="testimonials">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 section-heading text-center">
+            <h2 class="to-animate">Clients</h2>
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2 subtext to-animate">
+                <h3>Below are the list of our happy clients.</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row row-bottom-padded-sm">
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client1.png" alt="Image" class="img-responsive client-logo">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client2.png" alt="Image" class="img-responsive client-logo">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client3.png" alt="Image" class="img-responsive client-logo">
+          </div>
+        </div>
+        <div class="row row-bottom-padded-sm">
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client4.png" alt="Image" class="img-responsive client-logo">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client5.png" alt="Image" class="img-responsive client-logo">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client6.png" alt="Image" class="img-responsive client-logo">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client7.png" alt="Image" class="img-responsive client-logo">
+          </div>
+          <div class="col-md-4 col-sm-6 col-xxs-12">
+            <img src="images/clients/client8.png" alt="Image" class="img-responsive client-logo">
+          </div>
+  
+        </div>
+      </div>
+    </section>
 
   <section id="fh5co-contact" data-section="contact">
     <div class="container">
