style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -380,7 +380,7 @@
             <figure><img src="images/team/lalit.png" alt="Image"></figure>
             <h3>Er. Lalit Kaushik</h3>
             <span class="fh5co-position">B.Tech. MBA (BITS Plani)</span>
-            <p>B.Tech. Mechanical Engineering, Experience with Radico Khaitan Limited, Macawber Beekay Pvt. Ltd.,
+            <p>Chartered Eng. Mechanical Engineering, Experience with Radico Khaitan Limited, Macawber Beekay Pvt. Ltd.,
               Synnova Power</p>
           </div>
         </div>
