style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -360,9 +360,9 @@
         <div class="col-md-4">
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/prashun.png" alt="Image"></figure>
-            <h3>Er. Prashun Ghatak</h3>
-            <span class="fh5co-position">Chartered Engineer</span>
-            <p>B.Tech in Electrical Engineering. Experienced with L&T-EDRC, L&T-MMH &Power Protects Engineering Co.</p>
+            <h3>Er. Prashun Ghatak(CEng)</h3>
+            <span class="fh5co-position">B.Tech in Electrical Engineering</span>
+            <p>Experienced with L&T-EDRC, L&T-MMH &Power Protects Engineering Co.</p>
           </div>
         </div>
 
@@ -371,17 +371,16 @@
             <figure><img src="images/team/vikas.png" alt="Image"></figure>
             <h3>Vikash Tiwari</h3>
             <span class="fh5co-position">B.E., Delhi College of Engineering</span>
-            <p>Experience with Barclay UK, Agilent US, OWCS Consultant, OWCS Consultant, CSC Hartford, HCLTech, Oracle</p>
+            <p>Experience with Barclay UK, Agilent US, OWCS Consultant, OWCS Consultant, HCLTech, Oracle</p>
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/lalit.png" alt="Image"></figure>
-            <h3>Er. Lalit Kaushik</h3>
+            <h3>Er. Lalit Kaushik(CEng)</h3>
             <span class="fh5co-position">B.Tech. MBA (BITS Plani)</span>
-            <p>Chartered Eng. Mechanical Engineering, Experience with Radico Khaitan Limited, Macawber Beekay Pvt. Ltd.,
-              Synnova Power</p>
+            <p>Experience with Radico Khaitan Limited, Macawber Beekay Pvt. Ltd., Synnova Power</p>
           </div>
         </div>
       </div>
