--- a/v1/index.html
+++ b/v1/index.html
@@ -210,7 +210,7 @@
         <div class="clearfix visible-sm-block"></div>
 
         <div class="col-md-6 col-sm-6 fh5co-service to-animate">
-          <i class="icon to-animate-2 icon-rocket"></i>
+          <i class="icon to-animate-2 icon-battery-3"></i>
           <h3>Hybrid Energy</h3>
           <p>KV Consultancy is working closely with customers on projects that can additional investigate the
             opportunities in hybrid and provide knowledge to direct the future product contribution. Also, KV
@@ -329,9 +329,10 @@
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/himanshu.png" alt="Image"></figure>
             <h3>Himanshu Sharma</h3>
-            <span class="fh5co-position">B.E., NSIT, Director</span>
-            <p>Experience with with Fractal Analytics, Gurgaon as a Senior Consultant &Fractal Analytics, USA as a
-              Senior Consultant</p>
+            <span class="fh5co-position">B.E., NSIT, Delhi</span>
+            <p>Experience with Fractal Analytics, Gurgaon and Fractal Analytics, USA as a Senior Consultant/Associate
+              Director.
+            </p>
           </div>
         </div>
 
@@ -388,50 +389,50 @@
   </section>
 
   <section id="fh5co-testimonials" data-section="testimonials">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 section-heading text-center">
-            <h2 class="to-animate">Clients</h2>
-            <div class="row">
-              <div class="col-md-8 col-md-offset-2 subtext to-animate">
-                <h3>Below are the list of our happy clients.</h3>
-              </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 section-heading text-center">
+          <h2 class="to-animate">Clients</h2>
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2 subtext to-animate">
+              <h3>Below are the list of our happy clients.</h3>
             </div>
           </div>
         </div>
-        <div class="row row-bottom-padded-sm">
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client1.png" alt="Image" class="img-responsive client-logo">
-          </div>
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client2.png" alt="Image" class="img-responsive client-logo">
-          </div>
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client3.png" alt="Image" class="img-responsive client-logo">
-          </div>
+      </div>
+      <div class="row row-bottom-padded-sm">
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client1.png" alt="Image" class="img-responsive client-logo">
         </div>
-        <div class="row row-bottom-padded-sm">
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client4.png" alt="Image" class="img-responsive client-logo">
-          </div>
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client5.png" alt="Image" class="img-responsive client-logo">
-          </div>
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client6.png" alt="Image" class="img-responsive client-logo">
-          </div>
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client2.png" alt="Image" class="img-responsive client-logo">
         </div>
-        <div class="row">
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client7.png" alt="Image" class="img-responsive client-logo">
-          </div>
-          <div class="col-md-4 col-sm-6 col-xxs-12">
-            <img src="images/clients/client8.png" alt="Image" class="img-responsive client-logo">
-          </div>
-  
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client3.png" alt="Image" class="img-responsive client-logo">
         </div>
       </div>
-    </section>
+      <div class="row row-bottom-padded-sm">
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client4.png" alt="Image" class="img-responsive client-logo">
+        </div>
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client5.png" alt="Image" class="img-responsive client-logo">
+        </div>
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client6.png" alt="Image" class="img-responsive client-logo">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client7.png" alt="Image" class="img-responsive client-logo">
+        </div>
+        <div class="col-md-4 col-sm-6 col-xxs-12">
+          <img src="images/clients/client8.png" alt="Image" class="img-responsive client-logo">
+        </div>
+
+      </div>
+    </div>
+  </section>
 
   <section id="fh5co-contact" data-section="contact">
     <div class="container">
