style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -95,6 +95,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
             <li><a href="#" data-nav-section="services"><span>Services</span></a></li>
+            <li><a href="#" data-nav-section="mentors"><span>Mentors</span></a></li>
             <li><a href="#" data-nav-section="work"><span>Work</span></a></li>
             <li><a href="#" data-nav-section="about"><span>Team</span></a></li>
             <li><a href="#" data-nav-section="testimonials"><span>Clients</span></a></li>
@@ -162,8 +163,8 @@
           <div class="fh5co-text">
             <i class="fh5co-intro-icon icon-question-circle"></i>
             <h2>FAQ</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-              blind texts.</p>
+            <p>All frequently asked questions at one place. For more queries please contact us using details mentioned
+              in contact section.</p>
             <p><a href="#" class="btn btn-primary">Know more</a></p>
           </div>
         </div>
@@ -229,6 +230,63 @@
     </div>
   </section>
 
+  <section id="fh5co-mentors" data-section="mentors">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 section-heading text-center">
+          <h2 class="to-animate">Our Mentors</h2>
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2 subtext to-animate">
+              <h3></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row row-bottom-padded-lg">
+
+        <div class="col-md-4">
+          <div class="fh5co-person text-center to-animate">
+            <figure><img src="images/team/mentor/vishal.png" alt="Image"></figure>
+            <h3>Dr. VISHAL SHARMA</h3>
+            <span class="fh5co-position">Assistant Professor & Head, J&K</span>
+            <p>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="fh5co-person text-center to-animate">
+            <figure><img src="images/team/mentor/tarak.png" alt="Image"></figure>
+            <h3>Dr. TARKESHWAR</h3>
+            <span class="fh5co-position">Assistant Professor-Delhi University</span>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="fh5co-person text-center to-animate">
+            <figure><img src="images/team/mentor/ramesh.png" alt="Image"></figure>
+            <h3>Dr. Ramesh Chandra Mehta </h3>
+            <span class="fh5co-position">Senior Professor-Delhi University</span>
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+        <div class="row">
+          <div class="col-md-4">
+            <div class="fh5co-person text-center to-animate">
+              <figure><img src="images/team/mentor/siriniwas.png" alt="Image"></figure>
+              <h3>Sh. Shriniwas Sharma</h3>
+              <span class="fh5co-position">30+ Yrs Civil Eng. Experience</span>
+              <p></p>
+            </div>
+          </div>
+        </div>
+
+    </div>
+  </section>
+
   <section id="fh5co-work" data-section="work">
     <div class="container">
       <div class="row">
@@ -249,8 +307,8 @@
           <a href="images/work_1.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work_1.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>Project 1</h2>
-              <span>Branding</span>
+              <h2>50.05Kwp</h2>
+              <span>Yoma-Mayanmar</span>
             </div>
           </a>
         </div>
@@ -258,8 +316,8 @@
           <a href="images/work_2.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work_2.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>Project 2</h2>
-              <span>Web</span>
+              <h2>52.65KWp High rise building Project</h2>
+              <span>Yoma-Mayanmar</span>
             </div>
           </a>
         </div>
@@ -270,8 +328,8 @@
           <a href="images/work_3.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work_3.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>Project 3</h2>
-              <span>Web</span>
+              <h2>52.65KWp Stand alone System</h2>
+              <span>Yoma-Kyun Pila Ireland</span>
             </div>
           </a>
         </div>
@@ -279,8 +337,8 @@
           <a href="images/work_4.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work_4.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>Project 4</h2>
-              <span>UI/UX</span>
+              <h2>130 KWp Ambala </h2>
+              <span>IOCL(PSU)</span>
             </div>
           </a>
         </div>
@@ -291,8 +349,8 @@
           <a href="images/work_5.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work_5.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>Project 1</h2>
-              <span>Photography</span>
+              <h2>100 KWp IOCL(PSU) Bottling Plant</h2>
+              <span>Leh, J&K</span>
             </div>
           </a>
         </div>
@@ -300,8 +358,8 @@
           <a href="images/work_6.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work_6.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>Project 2</h2>
-              <span>Illustration</span>
+              <h2>Upcoming Projects</h2>
+              <span>Various Locations</span>
             </div>
           </a>
         </div>
@@ -329,7 +387,7 @@
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/himanshu.png" alt="Image"></figure>
             <h3>Himanshu Sharma</h3>
-            <span class="fh5co-position">B.E., NSIT, Delhi</span>
+            <span class="fh5co-position">B.E. NSIT, Delhi</span>
             <p>Experience with Fractal Analytics, Gurgaon and Fractal Analytics, USA as a Senior Consultant/Associate
               Director.
             </p>
