style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -438,7 +438,7 @@
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/lalit.png" alt="Image"></figure>
             <h3>Er. Lalit Kaushik(CEng)</h3>
-            <span class="fh5co-position">B.Tech. MBA (BITS Plani)</span>
+            <span class="fh5co-position">B.Tech. MBA (BITS Pilani)</span>
             <p>Experience with Radico Khaitan Limited, Macawber Beekay Pvt. Ltd., Synnova Power</p>
           </div>
         </div>
