--- a/v1/index.html
+++ b/v1/index.html
@@ -520,25 +520,27 @@
 
         <div class="col-md-6 to-animate">
           <h3>Contact Form</h3>
-          <div class="form-group ">
-            <label for="name" class="sr-only">Name</label>
-            <input id="name" class="form-control" placeholder="Name" type="text">
-          </div>
-          <div class="form-group ">
-            <label for="email" class="sr-only">Email</label>
-            <input id="email" class="form-control" placeholder="Email" type="email">
-          </div>
-          <div class="form-group ">
-            <label for="phone" class="sr-only">Phone</label>
-            <input id="phone" class="form-control" placeholder="Phone" type="text">
-          </div>
-          <div class="form-group ">
-            <label for="message" class="sr-only">Message</label>
-            <textarea name="" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
-          </div>
-          <div class="form-group ">
-            <input class="btn btn-primary btn-lg" value="Send Message" type="submit">
-          </div>
+          <form action="https://formspree.io/prashant-sh@hcl.com" method="POST">
+            <div class="form-group ">
+              <label for="name" class="sr-only">Name</label>
+              <input id="name" class="form-control" placeholder="Name" type="text">
+            </div>
+            <div class="form-group ">
+              <label for="email" class="sr-only">Email</label>
+              <input id="email" class="form-control" placeholder="Email" type="email" name="_replyto">
+            </div>
+            <div class="form-group ">
+              <label for="phone" class="sr-only">Phone</label>
+              <input id="phone" class="form-control" placeholder="Phone" type="text">
+            </div>
+            <div class="form-group ">
+              <label for="message" class="sr-only">Message</label>
+              <textarea name="" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
+            </div>
+            <div class="form-group ">
+              <input class="btn btn-primary btn-lg" value="Send Message" type="submit">
+            </div>
+          </form>
         </div>
       </div>
 
