--- a/v1/index.html
+++ b/v1/index.html
@@ -538,7 +538,7 @@
               <textarea name="" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
             </div>
             <div class="form-group ">
-              <input class="btn btn-primary btn-lg" value="Send Message" type="submit">
+              <input class="btn btn-primary btn-lg" value="Send" type="submit">
             </div>
           </form>
         </div>
