--- a/v1/index.html
+++ b/v1/index.html
@@ -107,7 +107,7 @@
     </div>
   </header>
 
-  <section id="fh5co-home" data-section="home" style="background-image: url(images/full_image_2.jpg);"
+  <section id="fh5co-home" data-section="home" style="background-image: url(./images/bg1.jpg);"
     data-stellar-background-ratio="0.5">
     <div class="gradient"></div>
     <div class="container">
