Commit from lenovo

--- a/v1/index.html
+++ b/v1/index.html
@@ -297,7 +297,7 @@
               <h3>KV consultancy team has the capability to serve the industry in broad areas with full potential of
                 knowledge, passion and vision. We can assure to deliver best in the market that justify value for
                 money. We not only give you solution but also give you satisfaction of international quality that will
-                boost your image for sustainability in following areas</h3>
+                boost your image for sustainability</h3>
             </div>
           </div>
         </div>
