--- a/v1/index.html
+++ b/v1/index.html
@@ -304,8 +304,8 @@
       </div>
       <div class="row row-bottom-padded-sm">
         <div class="col-md-4 col-sm-6 col-xxs-12">
-          <a href="images/work_1.jpg" class="fh5co-project-item image-popup to-animate">
-            <img src="images/work_1.jpg" alt="Image" class="img-responsive">
+          <a href="images/work1.jpg" class="fh5co-project-item image-popup to-animate">
+            <img src="images/work1.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
               <h2>50.05Kwp</h2>
               <span>Yoma-Mayanmar</span>
@@ -313,8 +313,8 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 col-xxs-12">
-          <a href="images/work_2.jpg" class="fh5co-project-item image-popup to-animate">
-            <img src="images/work_2.jpg" alt="Image" class="img-responsive">
+          <a href="images/work2.jpg" class="fh5co-project-item image-popup to-animate">
+            <img src="images/work2.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
               <h2>52.65KWp High rise building Project</h2>
               <span>Yoma-Mayanmar</span>
@@ -325,8 +325,8 @@
         <div class="clearfix visible-sm-block"></div>
 
         <div class="col-md-4 col-sm-6 col-xxs-12">
-          <a href="images/work_3.jpg" class="fh5co-project-item image-popup to-animate">
-            <img src="images/work_3.jpg" alt="Image" class="img-responsive">
+          <a href="images/work3.jpg" class="fh5co-project-item image-popup to-animate">
+            <img src="images/work3.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
               <h2>52.65KWp Stand alone System</h2>
               <span>Yoma-Kyun Pila Ireland</span>
@@ -334,8 +334,8 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 col-xxs-12">
-          <a href="images/work_4.jpg" class="fh5co-project-item image-popup to-animate">
-            <img src="images/work_4.jpg" alt="Image" class="img-responsive">
+          <a href="images/work4.jpg" class="fh5co-project-item image-popup to-animate">
+            <img src="images/work4.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
               <h2>130 KWp Ambala </h2>
               <span>IOCL(PSU)</span>
@@ -346,8 +346,8 @@
         <div class="clearfix visible-sm-block"></div>
 
         <div class="col-md-4 col-sm-6 col-xxs-12">
-          <a href="images/work_5.jpg" class="fh5co-project-item image-popup to-animate">
-            <img src="images/work_5.jpg" alt="Image" class="img-responsive">
+          <a href="images/work5.jpg" class="fh5co-project-item image-popup to-animate">
+            <img src="images/work5.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
               <h2>100 KWp IOCL(PSU) Bottling Plant</h2>
               <span>Leh, J&K</span>
@@ -355,8 +355,8 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 col-xxs-12">
-          <a href="images/work_6.jpg" class="fh5co-project-item image-popup to-animate">
-            <img src="images/work_6.jpg" alt="Image" class="img-responsive">
+          <a href="images/work_3.jpg" class="fh5co-project-item image-popup to-animate">
+            <img src="images/work_3.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
               <h2>Upcoming Projects</h2>
               <span>Various Locations</span>
