style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -307,7 +307,7 @@
           <a href="images/work1.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work1.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>50.05Kwp</h2>
+              <h2>50.05KWp</h2>
               <span>Yoma-Mayanmar</span>
             </div>
           </a>
@@ -316,7 +316,7 @@
           <a href="images/work2.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work2.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>52.65KWp High rise building Project</h2>
+              <h2>52.65KWp High Rise Building Project - P1</h2>
               <span>Yoma-Mayanmar</span>
             </div>
           </a>
@@ -328,8 +328,8 @@
           <a href="images/work3.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work3.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>52.65KWp Stand alone System</h2>
-              <span>Yoma-Kyun Pila Ireland</span>
+              <h2>52.65KWp High Rise Building Project - P2</h2>
+              <span>Yoma-Mayanmar</span>
             </div>
           </a>
         </div>
