--- a/v1/index.html
+++ b/v1/index.html
@@ -337,8 +337,8 @@
           <a href="images/work4.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work4.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>130 KWp Ambala </h2>
-              <span>IOCL(PSU)</span>
+              <h2>130 KWp </h2>
+              <span>IOCL(PSU), Ambala</span>
             </div>
           </a>
         </div>
@@ -349,8 +349,8 @@
           <a href="images/work5.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work5.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>100 KWp IOCL(PSU) Bottling Plant</h2>
-              <span>Leh, J&K</span>
+              <h2>100 KWp Bottling Plant</h2>
+              <span>IOCL(PSU), Leh, J&K</span>
             </div>
           </a>
         </div>
