style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -115,7 +115,7 @@
         <div class="text-inner">
           <div class="row row-bottom-padded-sm">
             <div class="col-md-8 col-md-offset-2">
-              <h1 class="to-animate">Who we are.</h1>
+              <h1 class="to-animate">Who we are?</h1>
               <h2 class="to-animate">
                 We are the team of Efficient, qualified professionals having above 20 year experienced with industrial
                 background. We provide the engineering services equipped with experienced professional for Solar design
@@ -307,7 +307,7 @@
           <a href="images/work1.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work1.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>50.05KWp</h2>
+              <h2>50.05 KWp</h2>
               <span>Yoma-Mayanmar</span>
             </div>
           </a>
@@ -316,7 +316,7 @@
           <a href="images/work2.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work2.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>52.65KWp High Rise Building - P1</h2>
+              <h2>52.65 KWp High Rise Building - P1</h2>
               <span>Yoma-Mayanmar</span>
             </div>
           </a>
@@ -328,7 +328,7 @@
           <a href="images/work3.jpg" class="fh5co-project-item image-popup to-animate">
             <img src="images/work3.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
-              <h2>52.65KWp High Rise Building - P2</h2>
+              <h2>52.65 KWp High Rise Building - P2</h2>
               <span>Yoma-Mayanmar</span>
             </div>
           </a>
