style content changed

--- a/v1/index.html
+++ b/v1/index.html
@@ -117,7 +117,7 @@
             <div class="col-md-8 col-md-offset-2">
               <h1 class="to-animate">Who we are?</h1>
               <h2 class="to-animate">
-                We are the team of Efficient, qualified professionals having above 20 year experienced with industrial
+                We are the team of efficient, qualified professionals having above 20 year experienced with industrial
                 background. We provide the engineering services equipped with experienced professional for Solar design
                 ,Thermal design, Mechanical design, Detail Drawing, Estimation and analysis that helps the clients to
                 realize maximum return from their equipment and of-course from their valuable trust.
