--- a/beta/index.html
+++ b/beta/index.html
@@ -274,6 +274,16 @@
       </div>
 
       <div class="row">
+
+          <div class="col-md-4">
+              <div class="fh5co-person text-center to-animate">
+                <figure><img src="images/team/mentor/ravinder.jpg" alt="Image"></figure>
+                <h3>Sh. Ravindra Tiwari</h3>
+                <span class="fh5co-position">20+ Yrs Exp., B.Tech. Govt. College</span>
+                <p></p>
+              </div>
+            </div>
+
         <div class="col-md-4">
           <div class="fh5co-person text-center to-animate">
             <figure><img src="images/team/mentor/tarak.png" alt="Image"></figure>
