--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<div class="row">
 							<div class="col-12 col-lg-9 col-xl-6">
 
-								<div class="countdown text-white mb-5 animated" data-animation="fadeInUp" data-countdown="2018/11/01 12:00:00"></div>
+								<!-- <div class="countdown text-white mb-5 animated" data-animation="fadeInUp" data-countdown="2018/11/01 12:00:00"></div> -->
 								<h2 class="text-white mb-5 animated" data-animation="fadeInUp" data-animation-delay="150">Our website is under construction. We`ll be here soon with our new awesome site. Meanwhile have a look at <a href="./beta/" style="font-style:italic; font-weight:bold">beta</a> version.</h2>
 
 							</div>
