--- a/index.html
+++ b/index.html
@@ -15,20 +15,6 @@
   <meta name="keywords" content="" />
   <meta name="author" content="" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   <!-- Facebook and Twitter integration -->
   <meta property="og:title" content="" />
   <meta property="og:image" content="" />
@@ -69,7 +55,7 @@
 	7. green.css
 
 	-->
-  <link rel="stylesheet" href="css/style3.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Modernizr JS -->
   <script src="js/modernizr-2.6.2.min.js"></script>
@@ -365,8 +351,8 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 col-xxs-12">
-          <a href="images/work_3.jpg" class="fh5co-project-item image-popup to-animate">
-            <img src="images/work_3.jpg" alt="Image" class="img-responsive">
+          <a href="images/work6.jpg" class="fh5co-project-item image-popup to-animate">
+            <img src="images/work6.jpg" alt="Image" class="img-responsive">
             <div class="fh5co-text">
               <h2>Upcoming Projects</h2>
               <span>Various Locations</span>
@@ -517,7 +503,7 @@
           <ul class="fh5co-contact-info">
             <li class="fh5co-contact-address ">
               <i class="icon-home"></i>
-              C-16, Opposite Navniti Apartments <br>Patparganj, Delhi - 110092
+              C-16, Mandawali, Opposite Navniti Apartments <br>Delhi - 110092
             </li>
             <li><i class="icon-phone"></i> (+91) 99100 33708</li>
             <li><i class="icon-envelope"></i>info@wishline.in</li>
