--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <li><a href="#" data-nav-section="about"><span>Team</span></a></li>
             <li><a href="#" data-nav-section="testimonials"><span>Clients</span></a></li>
             <li><a href="#" data-nav-section="contact"><span>Contact</span></a></li>
+            <li><a href="#" data-nav-section="get"><span>Get Quote</span></a></li>
           </ul>
         </div>
       </nav>
@@ -114,7 +115,7 @@
       </div>
     </div>
     <div class="slant"></div>
-  </section>
+  </section>  
 
   <section id="fh5co-intro">
     <div class="container">
@@ -540,6 +541,27 @@
     </div>
     </div>
   </section>
+
+  <section id="fh5co-home" data-section="get" style="background-image: url(./images/bg4.jpg);"
+  data-stellar-background-ratio="0.5">
+  <div class="gradient"></div>
+  <div class="container">
+    <div class="text-wrap">
+      <div class="text-inner">
+        <div class="row row-bottom-padded-sm">
+          <div class="col-md-8 col-md-offset-2">
+            <h1 class="to-animate">Get Customized Quote</h1>
+            <h2 class="to-animate">
+              We are Happy to help you in your situation.
+            </h2>
+            <button style="color:#2185d5; transition:0.5s;"><a style="color:black" href="https://docs.google.com/forms/d/e/1FAIpQLSe0etLnjljGubRBedMspxKgjkog5LwIMguze5dSxSeDWdj2Jg/viewform?usp=pp_url">Fill the Form</a></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="slant"></div>
+</section>
 
 
   <footer id="footer" role="contentinfo">
